src/objects/Feedback_Providers__c.object
<CustomObject>
    <fields>
        <fullName>Feedback_Id__c</fullName>
        <label>Feedback Id</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipName>SMI_Feedback_Providers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback_Provider_First_Name__c</fullName>
        <formula>Feedback_Provider__r.FirstName</formula>
        <label>Feedback Provider First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Provider</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMI_Feedback_Providers_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgAddress_TF__c</fullName>
        <description>Technical Field to Store Org Address. Used in Email Template.</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgAddress_TF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to send reminder to FB provider</description>
        <inlineHelpText>Check this box to send a reminder to the Feedback Provider. Please note that this is a one time event. Please edit the record and check this box again to send another reminder.</inlineHelpText>
        <label>Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <formula>Feedback_Id__r.Supplier_Account__r.Name</formula>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <label>Feedback Provider</label>
    <nameField>
        <displayFormat>FP-{000}</displayFormat>
        <label>Feedback Provider ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>